--- a/Practice/assets/css/style.css
+++ b/Practice/assets/css/style.css
@@ -1,7 +1,31 @@
-.header{
+/* .header{
     background-color: red;
 }
 
 .test{
 background-color: magenta;
+}
+
+.h1-design{
+    color: magenta;
+    background-color: yellow;
+    width: max-content ;
+}
+.head{
+    font-size: 50px;
+} */
+
+.active{
+    color: white;
+    background-color:green ;
+    border-radius: 5px;
+    border: 1px solid yellow;
+    width: max-content;
+}
+.inActive{
+    color: white;
+    background-color:red ;
+    border-radius: 5px;
+    border: 1px solid magenta;
+    width: max-content;
 }
