--- a/Practice/assets/css/style.css
+++ b/Practice/assets/css/style.css
@@ -29,7 +29,7 @@ background-color: magenta;
     border: 1px solid magenta;
     width: max-content;
 } */
-
+/* 
 #products {
     width: 100vw;
     height: 100vh;
@@ -59,4 +59,4 @@ button{
 }
 .body-active{
     background-color: black;
-}
+} */
